--- a/src/assets/scss/page/vote.scss
+++ b/src/assets/scss/page/vote.scss
@@ -1,141 +1,129 @@
 //上個月投票結果
-.vote_top{
+.vote_top {
   position: relative;
   color: $mainTextColor;
-  .podium_img img{
+  .podium_img img {
     width: 170px;
     height: 170px;
+  }
+  .podium_no {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+
+    img {
+      width: 170px;
+      height: 170px;
+    }
+  }
+  .podium {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .podium_box {
+      width: 365px;
+      height: 310px;
+      // background-color: $primaryColorYellow;
+      text-align: center;
+      border: darkblue solid;
+    }
   }
 
   .banner {
     background-image: url("/src/assets/images/vote/tree.svg");
     background-color: #f5efeb;
 
-    width: 100%;
-    height: 920px;
-
+    width: 100vw;
+    height: 95vh;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom center;
-    
+
     .title {
-      color:$primaryColorGreen;
+      color: $primaryColorGreen;
       text-align: center;
       line-height: 1.5;
-      padding-top: 43px;
+      padding-top: 3%;
     }
-    
+
     .sheep {
       position: absolute;
       bottom: 0px;
-      left: 300px;
+      left: 20%;
       transform: scaleX(-1);
-
-      
+      width: 8vw;
     }
   }
-
 }
-
-  .vote_top .podium_no{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: absolute;
-    bottom: 0;
-  
-  }
-  .vote_top .podium{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-   
-  
-  }
-  .vote_top .podium .podium_box{
-    width: 365px;
-    height: 310px;
-    // background-color: $primaryColorYellow;
-    text-align: center;
-  }
- 
-
-  .vote_top .podium_no img{
-    width: 170px;
-    height: 170px;
-  }
 
 //投票活動
-.vote_activity{
-    height:710px;
-    width: 100%;
-    background-color: #fff;
-    position: relative;
-    padding-bottom: 211px;
-    color: $mainTextColor;
+.vote_activity {
+  height: 100vh;
+  width: 100%;
+  background-color: #fff;
+  position: relative;
+  padding-bottom: 211px;
+  color: $mainTextColor;
 
- 
-   
-}
-.vote_activity h1{
-    
-    color:$primaryColorGreen;
+  h1 {
+    color: $primaryColorGreen;
     text-align: center;
-   line-height: 1.5;
-   padding-top: 85px;
-}
-.vote_activity  p{
-    
+    line-height: 1.5;
+    padding-top: 85px;
+  }
+  p {
     margin: 50px 270px;
     text-align: left;
     line-height: 1.5;
+  }
+  .cloud_6 {
+    position: absolute;
+    top: 20%;
+    left: 8%;
+    background-repeat: no-repeat;
+    img {
+      width: 65%;
+    }
+  }
+  .cloud_2 {
+    position: absolute;
+    top: 85px;
+    right: 93px;
+    background-repeat: no-repeat;
+  }
+  .squirrel_2 {
+    position: absolute;
+    bottom: 0;
+    left: 105px;
+    background-repeat: no-repeat;
+  }
+  .vote_rule {
+    display: flex;
+    flex-direction: row;
+    padding: 15px 0;
+    align-items: flex-start;
+    justify-content: flex-start;
+    line-height: 1.5;
+    margin: 0 270px;
 
-   
-}
-.vote_activity .vote_rule{
-  display: flex;
-  flex-direction: row;
-  padding: 15px 0;
-  align-items: flex-start;
-  justify-content: flex-start;
-  line-height: 1.5;
-  margin:0 270px;
+    time {
+      white-space: nowrap;
 
-
+      padding-right: 56px;
+    }
+    p {
+      text-align: left;
+      margin: 0;
+    }
+  }
 }
-.vote_activity .vote_rule .time{
-  white-space: nowrap;
- 
-  padding-right: 56px;
-}
-.vote_activity .vote_rule p{
-  text-align: left;
-  margin: 0;
- 
-}
-.vote_activity .cloud_6{
-  position: absolute;
-  top: 207px;
-  left: 107px;
-  background-repeat: no-repeat;
-}
-.vote_activity .cloud_2{
-  position: absolute;
-  top: 85px;
-  right: 93px;
-  background-repeat: no-repeat;
-}
-.vote_activity .squirrel_2{
-  position: absolute;
-  bottom: 0;
-  left: 105px;
-  background-repeat: no-repeat;
-}
-
 
 //人氣投票TOP3
-.vote_popular{
+.vote_popular {
   height: 748px;
   width: 100%;
   background-color: $primaryColorGreen;
@@ -148,158 +136,132 @@
   justify-content: center;
   position: relative;
   color: $mainTextColor;
+  .title {
+    margin: 44px 0;
+    color: #fff;
+  }
+  .content img {
+    width: 95px;
+    height: 95px;
+    border-radius: 50%;
+    margin: 20px;
+  }
+  .ranking {
+    display: flex;
+    .content {
+      width: 1366px;
+      height: 135px;
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      margin: 10px 0;
+    }
+  }
 }
-.vote_popular .title{
-  margin: 44px 0;
-  color: #fff;
+.vote_popular {
+  .caterpillar img {
+    position: absolute;
+    height: 200px;
+    width: 265px;
+    bottom: 0;
+    right: 25px;
+  }
+  .ranking {
+    .number {
+      width: 96px;
+      height: 135px;
+      background-color: $primaryColorYellow;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .content {
+      .name {
+        margin: 32px;
+      }
+      .votes {
+        margin-left: 536px;
+      }
+      button {
+        width: 180px;
+        height: 50px;
+        margin: 0 81px;
+      }
+    }
+  }
 }
-.vote_popular .content img{
-  width: 95px;
-  height: 95px;
-  border-radius: 50%;
-  margin: 20px;
-
-}
-.ranking {
-  display: flex;
-}
-.ranking .number{
-  width: 96px;
-  height: 135px;
-  background-color:$primaryColorYellow;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-.ranking .content{
-  width: 1366px;
-  height: 135px;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  margin: 10px 0;
-  
-}
-.ranking .content .name{
-  margin: 32px;
-}
-.ranking .content .votes{
-  margin-left: 536px;
-}
-
-.ranking .content button{
-  width: 180px;
-  height: 50px;
-  margin:0 81px;
-}
-
-.vote_popular .caterpillar img{
-  position: absolute;
-  height: 200px;
-  width:265px ;
-  bottom: 0;
-  right:25px ;
-}
-
 
 //投票列表
-.vote_overview_all{
-  background-color:$bgColorLightgray;
+.vote_overview_all {
+  background-color: $bgColorLightgray;
   background-repeat: no-repeat;
   background-position: center center;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content:space-around;
-  align-items:center;
+  justify-content: space-around;
+  align-items: center;
   color: $mainTextColor;
 
-padding-top: 198px;
-padding-bottom: 170px;
+  padding-top: 198px;
+  padding-bottom: 170px;
   position: relative;
-}
-.vote_button{
-  max-width: 1440px;
-  width: 100%;
-  display: flex;
-justify-content:  space-between;
-align-items: center;
-}
-.vote_button button{
-  width: 250px;
-  height: 75px;
-}
-.vote_wrap{
-
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  max-width: 1440px;
-  width: 100%;
-justify-content: flex-start;
-gap: 44px;
-align-items: center;
-
-
-
-
-}
-.vote_card img{
-  width: 327px;
-  height: 327px;
-}
- .vote_icon img{
-  width: 27.81px;
-  height: 26px;
-}
-
- .vote_card{
-  height: 500px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin:22px 0 ;
-  
-  
-}
-
- .vote_card .vote_name{
-
-  margin-top: 30px;
-}
-.vote_card .vote_icon{
-  margin: 20px 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  
-}
- .vote_card .vote_icon img{
-  margin:0 10px;
-}
- .vote_card button{
-  height: 50px;
-  width: 180px;
-
-}
-.vote_button button {
-
-  background-color:$primaryColorYellow;
-  
-}
-.vote_button button.hovered {
-
-  background-color: $primaryColorGreen;
-
-}
-
-.vote_overview_all .elephant1 img{
-  position: absolute;
-  bottom: 0;
-  height: 150px;
-  width: 196.87px;
-  right: 279px;
+  .elephant1 img {
+    position: absolute;
+    bottom: 0;
+    height: 150px;
+    width: 196.87px;
+    right: 279px;
+  }
+  .vote_button {
+    max-width: 1440px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button {
+      width: 250px;
+      height: 75px;
+      background-color: $primaryColorYellow;
+    }
+    button.hovered {
+      background-color: $primaryColorGreen;
+    }
+  }
+  .vote_wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 1440px;
+    width: 100%;
+    justify-content: flex-start;
+    gap: 44px;
+    align-items: center;
+    .vote_card {
+      height: 500px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 22px 0;
+      .vote_name {
+        margin-top: 30px;
+      }
+      img {
+        width: 327px;
+        height: 327px;
+      }
+      .vote_icon {
+        margin: 20px 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        img {
+          width: 27.81px;
+          height: 26px;
+          margin: 0 10px;
+        }
+      }
+    }
+  }
 }
