update header home

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -159,7 +159,7 @@ header {
       .header_news_hover{
         position: absolute;
         top: 3px;
-        left: 5vw;
+        // left: 5vw;
         width: 60px;
         height: 20px;
         overflow: hidden;
@@ -185,7 +185,7 @@ header {
       .header_park_hover{
         position: absolute;
         top: 3px;
-        left: 15vw;
+        // left: 15vw;
         width: 60px;
         height: 20px;
         overflow: hidden;
@@ -211,7 +211,7 @@ header {
       .header_animal_hover{
         position: absolute;
         top: 3px;
-        left: 24.5vw;
+        // left: 24.5vw;
         width: 60px;
         height: 20px;
         overflow: hidden;
@@ -237,7 +237,7 @@ header {
       .header_vote_hover{
         position: absolute;
         top: 3px;
-        left: 51vw;
+        // left: 51vw;
         width: 60px;
         height: 20px;
         overflow: hidden;
@@ -263,7 +263,7 @@ header {
       .header_school_hover{
         position: absolute;
         top: 3px;
-        left: 60.8vw;
+        // left: 60.8vw;
         width: 60px;
         height: 20px;
         overflow: hidden;
@@ -289,7 +289,7 @@ header {
       .header_ticket_hover{
         position: absolute;
         top: 3px;
-        left: 70.5vw;
+        // left: 70.5vw;
         width: 60px;
         height: 20px;
         overflow: hidden;
