--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -23,7 +23,7 @@ $time:10s;
             left: $left;
         }
         25% {
-            top: $top + 0.5;
+            top: $top - 0.5;
             left: $left ;
         }       
         50% {
@@ -90,6 +90,29 @@ $time:10s;
                     transition: 0.3s;
                     transform: scale(1.3);
                     cursor: pointer;
+                }
+                .pk_animal_icon_dialog_content{
+                    display: none;
+                    position:absolute;
+                    top: -110%;
+                    .pk_animal_icon_dialog{
+                        width: 140%;
+                        position: relative;
+                        bottom: 5%;
+                        right: 10%
+                    }
+                    .pk_animal_icon_dialog_content_text{
+                        width: 200%;
+                        height: 140%;
+                        position: absolute;
+                        top: 18%;
+                        right: -58%;
+                        color: $mainTextColor;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        gap: 7%
+                    }
                 }
             }
             .pk_animal_icon1{
@@ -255,8 +278,26 @@ $time:10s;
                 }
                 &:hover{
                     transition: 0.3s;
-                    transform: scale(1.3);
+                    transform: scale(1.2);
                     cursor: pointer;
+                }
+                .pk_Store_icon_dialog_content{
+                    display: none;
+                    position:absolute;
+                    top: -100%;
+                    .pk_Store_icon_dialog{
+                        width: 140%;
+                        position: relative;
+                        bottom: 5%;
+                        right: 10%
+                    }
+                    .pk_Store_icon_dialog_content_text{
+                        width: 200%;
+                        height: 140%;
+                        position: absolute;
+                        top: 25%;
+                        color: $mainTextColor;
+                    }
                 }
             }
             .pk_Store_icon_VC1{
@@ -344,10 +385,10 @@ $time:10s;
                         z-index: 10;
                     }
                     .pk_Tickets_item_mid{
-                        width: 98%;
+                        width: 97.3%;
                         position: absolute;
                         z-index: 10;
-                        top: 25.9%;
+                        top: 26%;
                     }
                     .pk_Tickets_item_animal{
                         width: 60%;
@@ -403,7 +444,7 @@ $time:10s;
                 align-items: center;
                 justify-content: center;
                 p{
-                    width: 355px;
+                    width: 79.7%;
                     color: $bgColorLightgray;
                     line-height: 220%;
                     letter-spacing: 2px;
@@ -413,10 +454,9 @@ $time:10s;
         .pk_information{
             width: 74%;
             display: flex;
-            gap: 5px;
+            gap: 10px;
             .pk_information_bulletin_board{
-                width: 790px;
-                height: 875px;
+                width: 60.1%;
                 position: relative;
                 z-index: 10;
                 img{
@@ -424,39 +464,51 @@ $time:10s;
                 }
                 ul{
                     position: absolute;
-                    top: 130px;
-                    right: 55px;
+                    width: 80%;
+                    top: 15%;
+                    right: 9%;
                     color: $bgColorLightgray;
                     line-height: 250%;
                     letter-spacing: 1px;
+                    @media (max-width:1800px) {
+                        font-size: 18px;
+                        line-height: 200%;
+                    }
+                    @media (max-width:1550px) {
+                        font-size: 16px;
+                        line-height: 200%;
+                    }
+                    @media (max-width:1280px) {
+                        font-size: 14px;
+                        line-height: 190%;
+                    }
                 }
             }
             .pk_information_Billboard{
-                width: 567px;
-                height: 875px;
+                width: 40.2%;
                 position: relative;
                 z-index: 10;
                 img{
                     width: 100%;
                 }
                 .pk_information_img_monkey{
-                    width: 255px;
-                    height: 235px;
+                    width: 45.5%;
                     position: absolute;
                     bottom: 0;
+                    left: -3%;
                 }
                 .pk_information_img_orangutan{
-                    width: 234px;
-                    height: 299px;
+                    width: 41.7%;
                     position: absolute;
                     bottom: 0;
+                    right: 5%;
                 }
             }
         }
         .pk_content_bg_tree{
             width: 100%;
             position: absolute;
-            bottom: -3px;
+            bottom: -1%;
             img{
                 width: 100%;
             }
