--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -2,7 +2,7 @@
     background-color: #F5EFEB;
     color: $mainTextColor;
     font-family: $font;
-    padding-top: 44px;
+    padding-top: 3vw;
     line-height: 1.5;
     // padding-bottom: 30px; //info會浮起來
     text-align: justify;
@@ -42,9 +42,9 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        padding-bottom: 20px;
-        margin-bottom: 20px;
-        border-bottom: 2px solid #3f3f3f;
+        padding-bottom: 1vw;
+        margin-bottom: 1vw;
+        border-bottom: 2px dashed $mainTextColor;
         // background-image: linear-gradient(to right, rgba(245, 239, 235, 0) 100%);
         img{
             min-width: 30px;
@@ -75,10 +75,13 @@
     input, select{
         padding-inline: 8px;
     }
+    select{
+        width: 280px;
+    }
 }
 .tickStep{
     width: 100%;
-    margin: 3vw auto 1.5vw;
+    margin: 3vw auto 1vw;
     img{
         height: 35px;
         margin: 0 auto;
@@ -86,11 +89,13 @@
 };
 .tickBtn{
     width: 100%;
-    button{ margin: 1.5vw 0; }
+    button{
+        margin: 1vw 0;
+        z-index: 999;
+    }
     .tickLBtn{ margin-right: 0;}
 }
 .price{
-    gap: 20px;
     margin-top: 20px;
     justify-content: end;
     align-items: flex-end;
@@ -108,16 +113,16 @@
 }
 .firstLine{
     border-top: 2px solid #3f3f3f;
-    padding-top: 20px;
-    margin-top: 20px;
+    padding-top: 1vw;
+    margin-top: 1vw;
 }
 
-// part0 購票須知(TickInfo.vue)
+// part0-1 購票須知(TickInfo.vue)
 .tickInfo{
     position: relative;
 
     article{
-        margin: 20px 5vw auto;
+        margin: 1vw 5vw auto;
         position: relative;
         z-index: 2;
         width: 550px;
@@ -125,7 +130,7 @@
     h2{
         color: $primaryColorYellow;
         text-align: center;
-        margin: 30px auto 20px;
+        margin: 1.5vw auto 1vw;
     }
     ol{
         list-style-type: decimal;
@@ -136,7 +141,7 @@
 .tickBgc{
     bottom: 0;
     position: absolute;
-    transform: translate(-14%, 0);
+    transform: translate(-10%, 0);
     
     .tickBoard{
         height: 540px;
@@ -144,12 +149,12 @@
     }
     .tickEagle{
         z-index: 3;
-        width: 8vw;
-        margin: auto -2vw 0 0;
+        width: 7vw;
+        margin: auto -4vw 0 0;
     }
 }
 
-// part1 日曆(TickCalendar.vue)
+// part0-2 日曆(TickCalendar.vue)
 .tickCalendar{
     width: 40%;
     div{
@@ -160,9 +165,6 @@
     }
     .tickBtn{
         justify-content: end;
-        .tickLBtn{
-            z-index: 999;
-        }
     }
     hgroup{
         border: 0;
@@ -236,52 +238,26 @@
         background-color: #ff6100;
     }
 }
-
-// @mixin tickInfo(){
-//     @for $i from 1 through 9 {
-//         $maxWidth: 1920 - 100*$i;
-//         $tranX: -5% - 1.5%*$i;
-//         $height: 36 + 0.25*$i*$i*$i;
-//         $width: 65% + 1.75%*$i;
-//         $h2mt: 60 - 4*$i*$i;
-
-//         @media screen and (max-width: #{$maxWidth}px){
-//             .tickBgc{
-//                 transform: translate($tranX, 0);
-//                 .tickBoard{
-//                     height: #{$height}vw;
-//                 }
-//             }
-//             .tickInfo{
-//                 article{
-//                     width: $width;
-//                 }
-//                 h2{
-//                 margin-top: #{$h2mt}px;
-//                 }
-//             }
-//         }
-//     }
-// }
-// @include tickInfo();
-@media screen and (max-width: 1640px){
+@media screen and (max-width: 1800px){
     .tickBgc{
-        transform: translate(-12%, 0);
-        .tickEagle{
-            margin-right: -5vw;
-        }
+        transform: translate(-9%, 0);
+        .tickBoard{ height: 530px; }
+    }
+}
+@media screen and (max-width: 1610px){
+    .tickBgc{
+        transform: translate(-11%, 0);
+        .tickBoard{ height: 520px; }
     }
     .tickInfo{
-        article{
-            margin: 20px 3vw auto;
-            width: 570px;
-        }
-        h2{
-            margin-top: 30px;
-        }
+        article{ margin: 20px 4vw auto; }
     }
 }
 @media screen and (max-width: 1540px){
+    .tickBgc{
+        transform: translate(-11%, 0);
+        .tickBoard{ height: 525px; }
+    }
     .tickInfo{
         article{
             margin: 20px 3vw auto;
@@ -290,29 +266,31 @@
     }
 }
 @media screen and (max-width: 1400px){
+    .tickBgc{
+        .tickBoard{ height: 515px; }
+        .tickEagle{ width: 8vw;}
+    }
     .tickInfo{
         article{
             width: 440px;
-            margin: 20px 3.5vw auto;
+            margin: 20px 4.2vw auto;
         }
-        h2{ margin-top: 20px; }
     }
 }
 
 
-// part2 選擇數量
+// part1 選擇數量
 .tickNum{
     width: 100%;
-    >div{
-        gap: 20px;
-    }
+    >div{ gap: 1vw; }
+    >.tickOption.PC{ gap: 4vw; }
 }
 
 .countBTN{
     display: flex;
     justify-content: center;
     input{
-        width: 60px;
+        width: 55px;
         text-align: right;
     }
     button{
@@ -330,95 +308,93 @@
     }
 }
 .tickOption.PC{
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-    max-width: 100%; /* 父層的最大寬度為100% */
-    max-height: 80vh; /* 父層的最大高度為100視窗高度 */
+    max-width: 100%;
+    text-align: center;
     img{
-        width: 100%;
-        height: auto;
-        margin-bottom: 20px;
+        width: auto;
+        height: 20vw;
+        margin-bottom: 1vw;
+        display: inline-block;
     }
 }
 
-
-
-// part3 付款頁
-.tickPayway, .tickFinished{
-    margin-top: 44px;
-    width: 100%;
-    >main:not(.tickBtn){
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        gap: 44px;
+// part2 付款頁 & part3 購票完成
+.tickCheck, .tickFinished{
+    width: 60%;
+    margin: 0 auto;
+    // >*{ vertical-align: bottom; }
+    >h2{ margin: 1.5vw auto; }
+    div:not(.price), hgroup{
+        align-items: flex-end;
+        gap: 2vw;
     }
-    select{
-        width: 280px;
-    }
-}
-// part3-1 確認訂單資訊
-.checkOrder{
-    >*{ align-items: flex-end; }
-        >h2{
-        margin-bottom: 44px;
-    }
-    hgroup{
-        h2{
-            color: $mainTextColor;
-            p{
-                font-weight: 700;
-            }
-        }
-        >:last-child{
-            font-weight: 700;
-        }
+    .choosed h2, h2>span{
+        color: $mainTextColor;
     }
     .choosed{
-        gap: 44px;
-        margin-top: 20px;
-        div{
-            align-items: flex-end;
-            gap: 20px;
-        }
-        p{
-            font-weight: 700;
-        }
-        h2, h2>span{
-            color: $mainTextColor
-        }
-        span{
-            font-weight: 500;
+        padding-bottom: 1vw;
+        border-bottom: 2px dashed $mainTextColor;
+    }
+    .coupon{
+        margin-bottom: 0;
+        border-bottom: 0;
+    }
+    .price{ margin-top: 0.5vw; }
+    >.price:last-of-type, article:not(.payWay)>.price:last-of-type{
+        border-bottom: 2px dashed $mainTextColor;
+        padding-bottom: 1vw;
+        margin-bottom: 1vw;
+    }
+    .payWay{
+        hgroup{
+            margin-bottom: 0;
+            border-bottom: 0;
         }
     }
 }
-// part3-2 優惠券&付款方式
-.pay{
-    hgroup{
-        margin-top: 20px;
+.tickCheck{
+    hgroup:first-of-type{
+        border-bottom: dashed;
     }
-    article>*:not(:first-child){
-        margin-top: 20px;
-        width: 100%;
-
-        input{
-            width: 100%;
+    hgroup:first-of-type>.mixedFont{
+        color: $mainTextColor;
+    }
+    .coupon{ margin-top: 2vw; }
+    .payWay{
+        margin-top: 2vw;
+        main{
+            margin-top: 0.5vw;
+            align-items: center;
+            gap: 2vw;
+            main{
+                width: 100%;
+                margin: 0;
+            }
         }
+        >main>p{ width: 120px; }
+        >main:first-of-type{ margin-top: 2vw; }
     }
-    main{
-        gap: 20px;
-    }
+    input{ width: 100%; }
+    .defaultBtn{ margin: 4vw 0;}
 }
-
-// part4 購票完成
 .tickFinished{
-    margin-bottom: 44px;
+    margin-bottom: 2vw;
     >section{
         text-align: center;
-        margin-bottom: 44px;
-
         p{
             color: $inputHintColor;
-            margin: 20px auto;
+            margin: 1vw auto;
         }
+    }
+    hgroup:nth-of-type(2){
+        border: 0;
+        padding-bottom: 0;
+        .mixedFont{
+            color: $mainTextColor;
+        }
+    }
+    .coupon{ margin-top: 1vw; }
+    .payWay{
+        margin-top: 1vw;
     }
 }
