--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -1,61 +1,43 @@
+@mixin tickBorder($way){
+    border-#{$way}: 2px dashed $mainTextColor;
+    padding-#{$way}: 1vw;
+    margin-#{$way}: 1vw;
+}
+
 .tick{
     background-color: #F5EFEB;
     color: $mainTextColor;
-    font-family: $font;
     padding-top: 3vw;
     line-height: 1.5;
-    // padding-bottom: 30px; //info會浮起來
     text-align: justify;
-    // min-height: 820px;
 
-    img{
-        vertical-align: bottom;
-        // outline: 1px solid red;
-    }
-    h2{
-        font-size: $pcFontH3;
-        color: $primaryColorGreen;
-        font-weight: 700;
-    }
-    p, li, button{
-        font-size: $pcFontH4;
-        font-weight: 500;
-    }
-    span{
-        font-size: $pcFontH5;
-        color: $inputHintColor;
-        font-weight: 500;
-    }
+    img{ vertical-align: bottom; }
+    h2{ color: $primaryColorGreen; }
+    span{ color: $inputHintColor; }
 
-    >article, >main{
-        width: 74%;
-    }
-    div{
+    >article, >main{ width: 74%; }
+    div{ display: flex;}
+    main{ margin: 0 auto; }
+    main, hgroup{
         display: flex;
-    }
-    main, .tickBtn{
-        display: flex;
-        margin: 0 auto;
         justify-content: space-between;
     }
     hgroup{
+        @include tickBorder(bottom);
         width: 100%;
-        display: flex;
-        justify-content: space-between;
-        padding-bottom: 1vw;
-        margin-bottom: 1vw;
-        border-bottom: 2px dashed $mainTextColor;
         // background-image: linear-gradient(to right, rgba(245, 239, 235, 0) 100%);
         img{
             min-width: 30px;
             width: 1.5vw;
         }
     }
-    .mixedFont>p{
-        display: inline-block;
+    .mixedFont{
+        color: $mainTextColor;
+        >*{ display: inline-block; }
     }
     .important{
-        color: $secColorblue;
+        >*{font-weight: 700; }
+        >:nth-child(2){ color: $secColorblue; }
     }
     input[type=number]::-webkit-inner-spin-button, 
     input[type=number]::-webkit-outer-spin-button { 
@@ -63,7 +45,7 @@
         margin: 0; 
     }
     input[type=number] {
-        -moz-appearance:textfield;
+        -moz-appearance: textfield;
     }
     input, .countBTN>button, select, option{
         height: 35px;
@@ -79,6 +61,7 @@
         width: 280px;
     }
 }
+
 .tickStep{
     width: 100%;
     margin: 3vw auto 1vw;
@@ -96,25 +79,16 @@
     .tickLBtn{ margin-right: 0;}
 }
 .price{
-    margin-top: 20px;
     justify-content: end;
     align-items: flex-end;
     text-align: right;
 
-
+    >*>*{ display: inline-block; }
     span{ color: $mainTextColor; }
-    :nth-child(2){
-        width: 180px;
-    }
-    .mixedFont>*{
-        display: inline-block;
-        font-weight: 700;
-    }
+    :nth-child(2){ width: 180px;}
 }
 .firstLine{
-    border-top: 2px solid #3f3f3f;
-    padding-top: 1vw;
-    margin-top: 1vw;
+    @include tickBorder(top);
 }
 
 // part0-1 購票須知(TickInfo.vue)
@@ -132,9 +106,7 @@
         text-align: center;
         margin: 1.5vw auto 1vw;
     }
-    ol{
-        list-style-type: decimal;
-    }
+    ol{ list-style-type: decimal; }
     li{ color: $bgColorWhite; }
     ul{ list-style-type: disc; }
 }
@@ -294,14 +266,9 @@
         text-align: right;
     }
     button{
-        // position: relative;
         width: 44px;
-        text-align: center;
         cursor: pointer;
         color: $mainTextColor;
-        font-size: $pcFontH5;
-        font-family: $decorateFont;
-        font-weight: 500;
         &:hover {
             background-color: $primaryColorYellow;
         }
@@ -322,46 +289,35 @@
 .tickCheck, .tickFinished{
     width: 60%;
     margin: 0 auto;
-    // >*{ vertical-align: bottom; }
+    *{ align-items: center; }
     >h2{ margin: 1.5vw auto; }
-    div:not(.price), hgroup{
-        align-items: flex-end;
-        gap: 2vw;
-    }
-    .choosed h2, h2>span{
-        color: $mainTextColor;
-    }
+    .price{ margin-top: 0.5vw; }
+    >hgroup:first-of-type{ font-weight: 700; }
+    div:not(.price){ gap: 2vw; }
     .choosed{
-        padding-bottom: 1vw;
-        border-bottom: 2px dashed $mainTextColor;
+        @include tickBorder(bottom);
+        h2, h2>span{ color: $mainTextColor; }
     }
     .coupon{
         margin-bottom: 0;
         border-bottom: 0;
     }
-    .price{ margin-top: 0.5vw; }
-    >.price:last-of-type, article:not(.payWay)>.price:last-of-type{
-        border-bottom: 2px dashed $mainTextColor;
-        padding-bottom: 1vw;
-        margin-bottom: 1vw;
+    .price:nth-of-type(3){
+        @include tickBorder(bottom);
     }
-    .payWay{
-        hgroup{
-            margin-bottom: 0;
-            border-bottom: 0;
-        }
+    .payWay hgroup{
+        margin-bottom: 0;
+        border-bottom: 0;
     }
 }
 .tickCheck{
-    hgroup:first-of-type{
-        border-bottom: dashed;
-    }
-    hgroup:first-of-type>.mixedFont{
-        color: $mainTextColor;
-    }
     .coupon{ margin-top: 2vw; }
+    input{ width: 100%; }
+    .defaultBtn{ margin: 4vw 0;}
     .payWay{
         margin-top: 2vw;
+        >main:first-of-type{ margin-top: 2vw; }
+        >main>p{ width: 120px; }
         main{
             margin-top: 0.5vw;
             align-items: center;
@@ -371,30 +327,17 @@
                 margin: 0;
             }
         }
-        >main>p{ width: 120px; }
-        >main:first-of-type{ margin-top: 2vw; }
     }
-    input{ width: 100%; }
-    .defaultBtn{ margin: 4vw 0;}
 }
 .tickFinished{
     margin-bottom: 2vw;
-    >section{
+    section{
         text-align: center;
+        margin-bottom: 2vw;
         p{
             color: $inputHintColor;
             margin: 1vw auto;
         }
     }
-    hgroup:nth-of-type(2){
-        border: 0;
-        padding-bottom: 0;
-        .mixedFont{
-            color: $mainTextColor;
-        }
-    }
-    .coupon{ margin-top: 1vw; }
-    .payWay{
-        margin-top: 1vw;
-    }
+    hgroup>:first-of-type{ font-weight: 700; }
 }
