--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -90,6 +90,9 @@ $time:10s;
                     transition: 0.3s;
                     transform: scale(1.3);
                     cursor: pointer;
+                    .pk_animal_icon_dialog_content {
+                        display: block; 
+                    }
                 }
                 .pk_animal_icon_dialog_content{
                     display: none;
@@ -111,7 +114,19 @@ $time:10s;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
-                        gap: 7%
+                        gap: 7%;
+                        font-weight: bold;
+                        p{
+                            @media (max-width:1280px) and (min-width:768px) {
+                                font-size: 10px;
+                            }
+                            @media (min-width:1440px) {
+                                font-size: 12px;
+                            }  
+                            @media (min-width:1600px) {
+                                font-size: 12.8px;
+                            }  
+                        }
                     }
                 }
             }
@@ -278,31 +293,41 @@ $time:10s;
                 }
                 &:hover{
                     transition: 0.3s;
-                    transform: scale(1.2);
+                    transform: scale(1.3);
+                    z-index: 999;
                     cursor: pointer;
+                    .pk_Store_icon_dialog_content{
+                        display: block;
+                    }
                 }
                 .pk_Store_icon_dialog_content{
                     display: none;
                     position:absolute;
-                    top: -100%;
-                    .pk_Store_icon_dialog{
-                        width: 140%;
-                        position: relative;
-                        bottom: 5%;
-                        right: 10%
-                    }
+                    top: -65%;
                     .pk_Store_icon_dialog_content_text{
-                        width: 200%;
-                        height: 140%;
                         position: absolute;
-                        top: 25%;
-                        color: $mainTextColor;
+                        top: 28%;
+                        left: 10%;
+                        color: $bgColorSecGray;
+                        font-weight: bold;
+                        p{
+                            @media (max-width:1280px) and (min-width:768px) {
+                                font-size: 10px;
+                            }
+                            @media (min-width:1440px) {
+                                font-size: 12px;
+                            }  
+                            @media (min-width:1600px) {
+                                font-size: 15px;
+                            }  
+                        }
                     }
+
                 }
             }
             .pk_Store_icon_VC1{
-                @include icon-top-location(530px);
-                @include icon-left-location(430px);
+                @include icon-top-location(600px);
+                @include icon-left-location(380px);
             }
             .pk_Store_icon_VC2{
                 @include icon-top-location(340px);
@@ -310,8 +335,8 @@ $time:10s;
             }
 
             .pk_Store_icon_WC1{
-                @include icon-top-location(570px);
-                @include icon-left-location(350px);
+                @include icon-top-location(660px);
+                @include icon-left-location(420px);
             }
             .pk_Store_icon_WC2{
                 @include icon-top-location(320px);
@@ -331,7 +356,7 @@ $time:10s;
             }
             
             .pk_Store_icon_RC1{
-                @include icon-top-location(490px);
+                @include icon-top-location(520px);
                 @include icon-left-location(360px);
             }
             .pk_Store_icon_RC2{
@@ -351,7 +376,57 @@ $time:10s;
                 @include icon-right-location(800px);
             }
         }
-        
+    }
+    .pk_Animal_details{
+        position: absolute;
+        z-index: 999;
+        top: 30%;
+        width: 16.8%;
+        height: 49.8%;
+        background-image: url("/src/assets/images/park/pk_Animal_details_bg.png");
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5%;
+        .pk_Animal_details_content_align{
+            width: 90%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 25%;
+            h1{
+                color: $primaryColorGreen;
+            }
+            .pk_Animal_details_closure_icon{
+                width: 18.75%;
+                img{
+                    width: 100%; 
+                }
+                &:hover{
+                    cursor: pointer;
+                }
+            }
+        }
+        .pk_Animal_details_img{
+            width: 65.9%;
+            position: relative;
+            img{
+                width: 100%;
+            }
+            .pk_Animal_details_frame{
+                position: absolute;
+                top: 0;
+            }
+        }
+        p{
+            font-size: 24px;
+        }
+        button{
+            width: 56.2%;
+            height: 10.9%;
+        }
     }
     .pk_content_bg{
         width: 100%;
