--- a/src/assets/scss/page/member.scss
+++ b/src/assets/scss/page/member.scss
@@ -14,10 +14,23 @@
   letter-spacing: 3px;
   margin-bottom: 20px;
 }
-
+.qrCodeLb {
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+}
 .memPage {
   position: relative;
   background-color: $bgColorLightgray;
+
   .memSidebar {
     display: flex;
     gap: 10px;
@@ -195,14 +208,18 @@
         align-items: center;
         margin-bottom: 3vw;
         color: $mainTextColor;
+        .idColor {
+          color: $secColorblue;
+          cursor: pointer;
+        }
       }
     }
     .ticketCrocodile {
       position: absolute;
       bottom: 0px;
       right: 30vw;
-      height: 70px;
-      width: 250px;
+      height: 50px;
+      width: 200px;
     }
   }
 
@@ -280,7 +297,7 @@
         @include defaultMemH2();
       }
       .commentGroup {
-        width: 60%;
+        width: 50%;
         gap: 10px;
         display: flex;
         justify-content: center;
@@ -292,7 +309,7 @@
           justify-content: center;
           gap: 2vw;
           width: 100%;
-          height: 20vw;
+          height: 18vw;
           .commentBg {
             position: absolute;
             width: 100%;
